--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   table_calendar: ^3.0.7
   flutter_html: ^2.2.0
   multi_select_flutter: ^4.0.0
+  emoji_picker_flutter: ^1.6.1
 
 
 
