--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -195,6 +195,22 @@ flutter:
     - images/unarchivee.svg
     - images/moree.svg
     - images/duplicatee.svg
+    - images/image.png
+    - images/image1.png
+    - images/image2.png
+    - images/image3.png
+    - images/image4.png
+    - images/image5.png
+    - images/image6.png
+    - images/image7.png
+    - images/image8.png
+    - images/image9.png
+    - images/image10.png
+    - images/image11.png
+    - images/image12.png
+    - images/image13.png
+    - images/image14.png
+    - images/image15.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
