--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -211,6 +211,22 @@ flutter:
     - images/image13.png
     - images/image14.png
     - images/image15.png
+    - images/image16.png
+    - images/image17.png
+    - images/image18.png
+    - images/image19.png
+    - images/image20.png
+    - images/image21.png
+    - images/image22.png
+    - images/image23.png
+    - images/image24.png
+    - images/image25.png
+    - images/image26.png
+    - images/image27.png
+    - images/image28.png
+    - images/image29.png
+    - images/image30.png
+    - images/image31.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
