--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -227,6 +227,8 @@ flutter:
     - images/image29.png
     - images/image30.png
     - images/image31.png
+    - images/image32.png
+    - images/image33.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
