--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,12 @@ dependencies:
   toggle_switch: ^2.1.0
   basic_utils: ^5.5.4
   flowder: ^0.2.0
+  dio: ^4.0.4
+  path_provider: ^2.0.8
+  permission_handler: ^8.3.0
+  open_file: ^3.2.1
+  flutter_file_downloader: ^1.1.0+1
+
 
 
 
