--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   permission_handler: ^8.3.0
   open_file: ^3.2.1
   flutter_file_downloader: ^1.1.0+1
+  flutter_downloader: ^1.6.1
+
 
 
 
