opportunity stage change design issue solved'

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -238,6 +238,10 @@ flutter:
     - images/image31.png
     - images/image32.png
     - images/image33.png
+    - images/bluebtn.png
+    - images/greenbtnfirst.png
+    - images/greenbtn.png
+    - images/greybtn.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
