--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -259,6 +259,12 @@ flutter:
     - family: Mulish
       fonts:
         - asset: assets/fonts/Mulish-Regular.ttf
+        - asset: assets/fonts/Mulish-Bold.ttf
+        - asset: assets/fonts/Mulish-ExtraBold.ttf
+        - asset: assets/fonts/Mulish-ExtraLight.ttf
+        - asset: assets/fonts/Mulish-Light.ttf
+        - asset: assets/fonts/Mulish-Medium.ttf
+        - asset: assets/fonts/Mulish-SemiBold.ttf
 #          style: italic
 #    - family: Mulish
 #      fonts:
