--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -244,6 +244,8 @@ flutter:
     - images/greybtn.png
     - images/cr.svg
     - images/pi.png
+    - images/send.svg
+    - images/sendd.svg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
