lead planned activity design and functional completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -250,6 +250,7 @@ flutter:
     - images/schedulecheck.png
     - images/schedulecancel.png
     - images/schedulecalendar.png
+    - images/scheduleedit.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
