--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -279,6 +279,9 @@ flutter:
     - images/sm.svg
     - images/ed.svg
     - images/de.svg
+    - images/st2.svg
+    - images/st3.svg
+    - images/star.svg
 
 
 
