add search nd filter button on lead

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -290,6 +290,8 @@ flutter:
     - images/email.svg
     - images/password.svg
     - images/search.svg
+    - images/search1.svg
+    - images/filter.svg
 
 
 
