--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.8+8
+version: 1.0.10+10
 
 environment:
   sdk: '>=2.18.1 <3.0.0'
@@ -62,6 +62,7 @@ dependencies:
   file_picker: ^4.2.1
   just_the_tooltip: ^0.0.12
   provider: ^6.0.5
+  app_settings: ^5.0.0
 
 
 
